--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1072,6 +1072,56 @@ SELECT {
 {english:"activity", spanish:"actividad (f)",englishPhrase:"there are lots of activities to do", spanishPhrase:"hay muchas actividades que hacer",module:"module 17",type:"words"},
 {english:"to print", spanish:"imprimir",englishPhrase:"did you print the tickets", spanishPhrase:"¿imprimiste los boletos?",module:"module 17",type:"words"},
 {english:"mess", spanish:"desorden (m)",englishPhrase:"what a mess you have made", spanishPhrase:"que desorden que has hecho",module:"module 17",type:"words"},
+{english:"promotion", spanish:"promoción (f)",englishPhrase:"this promotion is for today only", spanishPhrase:"esta promoción es sólo para hoy",module:"module 18",type:"words"},
+{english:"to compare", spanish:"comparar",englishPhrase:"I want to compare one with the other", spanishPhrase:"quiero compara uno con el otro",module:"module 18",type:"words"},
+{english:"fashion", spanish:"moda (f)",englishPhrase:"it's in fashion", spanishPhrase:"está de moda",module:"module 18",type:"words"},
+{english:"army", spanish:"ejército (m)",englishPhrase:"costa rica does not have an army", spanishPhrase:"costa rica no tiene ejército",module:"module 18",type:"words"},
+{english:"sad", spanish:"triste",englishPhrase:"a very sad story", spanishPhrase:"una historia muy triste",module:"module 18",type:"words"},
+{english:"milk", spanish:"leche (f)",englishPhrase:"we've run out of milk", spanishPhrase:"nos hemos quedado sin leche",module:"module 18",type:"words"},
+{english:"equally, the same to you", spanish:"igualmente",englishPhrase:"have a good day!  the same to you", spanishPhrase:"¡qué tengas buen dia!  igualmente",module:"module 18",type:"words"},
+{english:"separately", spanish:"aparte",englishPhrase:"we do it separately", spanishPhrase:"lo hacemos aparte",module:"module 18",type:"words"},
+{english:"to justify", spanish:"justificar",englishPhrase:"how can you justify it?", spanishPhrase:"¿cómo lo puedes justificar?",module:"module 18",type:"words"},
+{english:"permanent", spanish:"permanente",englishPhrase:"is it something permanent?", spanishPhrase:"¿es algo permanente?",module:"module 18",type:"words"},
+{english:"deal", spanish:"trato (m)",englishPhrase:"it's a deal between us", spanishPhrase:"es un trato entre nosotros",module:"module 18",type:"words"},
+{english:"weak, without energy", spanish:"débil",englishPhrase:"I woke up very weak", spanishPhrase:"me desperté muy débil",module:"module 18",type:"words"},
+{english:"expense", spanish:"gasto (m)",englishPhrase:"what expenses do you have?", spanishPhrase:"¿qué gastos tenemos?",module:"module 18",type:"words"},
+{english:"shade", spanish:"sombra (f)",englishPhrase:"sit down in the shade", spanishPhrase:"siéntate en la sombra",module:"module 18",type:"words"},
+{english:"passion", spanish:"pasión (f)",englishPhrase:"love and passion", spanishPhrase:"amor y pasión",module:"module 18",type:"words"},
+{english:"commission", spanish:"comisión (f)",englishPhrase:"they earn a commision with every sale", spanishPhrase:"ganan una comisión con cada venta",module:"module 18",type:"words"},
+{english:"rubber", spanish:"goma (f)",englishPhrase:"it's a rubber handle", spanishPhrase:"es un mango de goma",module:"module 18",type:"words"},
+{english:"maintenance", spanish:"mantenimiento (m)",englishPhrase:"it needs regular maintenance", spanishPhrase:"necesita mantenimiento regular",module:"module 18",type:"words"},
+{english:"adjustment", spanish:"ajuste (m)",englishPhrase:"we made an adjustment and now it works", spanishPhrase:"hicimos un ajuste y ahora functiona",module:"module 18",type:"words"},
+{english:"saint", spanish:"santo/a",englishPhrase:"he's a saint", spanishPhrase:"es un santo",module:"module 18",type:"words"},
+{english:"too much, too many", spanish:"demasiado",englishPhrase:"too many cooks in the kitchen", spanishPhrase:"demasiado cocineros en la cocina",module:"module 18",type:"words"},
+{english:"to learn", spanish:"aprender",englishPhrase:"I love to learn new things", spanishPhrase:"me encanta aprender cosas nuevas",module:"module 18",type:"words"},
+{english:"hammer", spanish:"martillo (m)",englishPhrase:"a hammer and nails", spanishPhrase:"un martillo y clavos",module:"module 18",type:"words"},
+{english:"screwdriver", spanish:"desarmador (m)",englishPhrase:"I lost the screwdriver", spanishPhrase:"perdí el desarmador",module:"module 18",type:"words"},
+{english:"cooperation", spanish:"cooperación",englishPhrase:"thank you for your cooperation", spanishPhrase:"gracias por tu cooperación",module:"module 18",type:"words"},
+{english:"expression", spanish:"expresión (f)",englishPhrase:"it's a famous expression", spanishPhrase:"es una expresión famosa",module:"module 18",type:"words"},
+{english:"strangely, funnily enough", spanish:"curiosamente",englishPhrase:"funnily enough, it wasn't even necessary", spanishPhrase:"curiosamente, ni siguiera era necesario",module:"module 18",type:"words"},
+{english:"cover, lid", spanish:"tapa (f)",englishPhrase:"is there a lid for this jar?", spanishPhrase:"¿hay una tapa para este frasco?",module:"module 18",type:"words"},
+{english:"nightmare", spanish:"pesadilla (f)",englishPhrase:"last night I had a nightmare", spanishPhrase:"anoche tuve una pesadilla",module:"module 18",type:"words"},
+{english:"innocence", spanish:"inocencia (f)",englishPhrase:"the innocence of a childe", spanishPhrase:"la inocencia de un niño",module:"module 18",type:"words"},
+{english:"annual", spanish:"annual",englishPhrase:"it's an annual event", spanishPhrase:"es un evento anual",module:"module 18",type:"words"},
+{english:"supreme", spanish:"supremo/a",englishPhrase:"it's a supreme court decision", spanishPhrase:"es una decisión de la corte supremo",module:"module 18",type:"words"},
+{english:"resignation", spanish:"renuncia (f)",englishPhrase:"I gave him my resignation this morning", spanishPhrase:"le di mi renuncia esta mañana",module:"module 18",type:"words"},
+{english:"loan", spanish:"préstamo (m)",englishPhrase:"I need a loan to buy it", spanishPhrase:"necesito un préstimo para comprarlo",module:"module 18",type:"words"},
+{english:"prince", spanish:"príncipe (m)",englishPhrase:"the prince of england", spanishPhrase:"el príncipe de inglaterra",module:"module 18",type:"words"},
+{english:"genius", spanish:"genio",englishPhrase:"she's a genius", spanishPhrase:"es un genio",module:"module 18",type:"words"},
+{english:"opera", spanish:"ópera (f)",englishPhrase:"I love going to the opera", spanishPhrase:"me encanta ir a la ópera",module:"module 18",type:"words"},
+{english:"kidney", spanish:"riñón (m)",englishPhrase:"I have problems with my kidneys", spanishPhrase:"tengo problemas con mis riñones",module:"module 18",type:"words"},
+{english:"to stretch", spanish:"estirar, estirarse",englishPhrase:"it's important to stretch before exercise", spanishPhrase:"es importante estirar antes de ejercicio",module:"module 18",type:"words"},
+{english:"thin, skinny", spanish:"flaco/a",englishPhrase:"he looks very thin", spanishPhrase:"se ve muy flaco",module:"module 18",type:"words"},
+{english:"maximum", spanish:"máximo/a",englishPhrase:"the maximum velocity", spanishPhrase:"la velocidad máxima",module:"module 18",type:"words"},
+{english:"scandal", spanish:"escándalo (m)",englishPhrase:"it's a huge scandal now", spanishPhrase:"es un escándalo enorme ahora",module:"module 18",type:"words"},
+{english:"to seem, appear, look like", spanish:"parecer",englishPhrase:"it appears to be fine now", spanishPhrase:"parece que está bien ahora",module:"module 18",type:"words"},
+{english:"to advance, move forward", spanish:"avanzar",englishPhrase:"he says you need to move forward a bit", spanishPhrase:"dice que necesitas avanzar un poco",module:"module 18",type:"words"},
+{english:"sun, sunshinie", spanish:"sol (m)",englishPhrase:"it's very sunny today", spanishPhrase:"hay mucho sol hoy",module:"module 18",type:"words"},
+{english:"shopping, purchase", spanish:"compra (f)",englishPhrase:"it's a ncecessary purchase", spanishPhrase:"es una compra necesaria",module:"module 18",type:"words"},
+{english:"to confirm", spanish:"confirmar",englishPhrase:"I need to confirm it first", spanishPhrase:"necesito confirmarlo primero",module:"module 18",type:"words"},
+{english:"little while", spanish:"rato (m)",englishPhrase:"I'll be back in a little while", spanishPhrase:"regreso en un rato",module:"module 18",type:"words"},
+{english:"queue, line, tail", spanish:"cola (f)",englishPhrase:"the queue at the supermarket was massive", spanishPhrase:"la cola era enorme en el super",module:"module 18",type:"words"},
+{english:"to accuse", spanish:"acusar",englishPhrase:"why are you accusing me?", spanishPhrase:"¿por qué me está acusando?",module:"module 18",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1539,6 +1589,28 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"it's an automatic door", spanishPhrase:"es una puerta automática",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"I try to focus on what's important", spanishPhrase:"trato de enfocarme en lo que es importante",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"there are a lot of variations", spanishPhrase:"hay muchas variaciónes",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"if we compare the promotions we can learn how to save the maximum amount possible", spanishPhrase:"si comparamos las promociones podemos a aprender a ahorrar la máxima cantidad  posible",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they tried to move forwrad but couldn't justify the expense", spanishPhrase:"trataron de avanzar pero no pudieron justificar los gastos",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"their cooperation was necessary to confirm the deal", spanishPhrase:"su cooperación fue necesaria para confirmar el trato",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"his resignation was a scandal after refusing the loan", spanishPhrase:"su renuncio fue una escándalo después de negar el préstamo",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he looks weak and thin", spanishPhrase:"se ve débil y flaco",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"where is the top for the milk? have you seen it?", spanishPhrase:"¿dónde esta la tapa para la leche?  ¿la has visto?",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"have you seen the hammer and the screwdriver?", spanishPhrase:"¿has visto el martillo y el desarmador?",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the saint in the picture had a sad expression on his face", spanishPhrase:"el santo en la pintura tenía una expresión triste en su cara",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it seems like a mixture of sunshine and shade", spanishPhrase:"parece una mezcla de sol y sombra",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they arrived separately to the opera and waited in the queue", spanishPhrase:"llegaron aparte a la ópera y espararon en la cola",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a story about a prince and his army", spanishPhrase:"es un cuento sobre un príncipe y su ejército",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"is it permanent or just for a little while?", spanishPhrase:"¿es permanente o solo por un rato?",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the annual commission was too much", spanishPhrase:"la comisión anual era demasiada",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he's a genius at fashion", spanishPhrase:"es un genio de la moda",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the maintenance of this old house is a nightmare", spanishPhrase:"el mantenimiento de esta casa vieja es una pesadilla",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"funnily enough, the adjustment they made didn't work", spanishPhrase:"curiosamente, el ajusto que hicieron no functionó",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the rubber around the bottom has stretched", spanishPhrase:"la goma alrededor del fondo se ha estirado",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's about passion and innocence", spanishPhrase:"es sobre la pasión y la inocencia",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"yes it's serious, his kidney failed", spanishPhrase:"sí es serio, su riñón falló",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she accuses me of delaying the purchase", spanishPhrase:"me acusa de retrasar la compra",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a supreme example of greed", spanishPhrase:"un ejemplo supremo de codicia",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"thank you, the same to you", spanishPhrase:"gracias, igualmente",module:"module 18",type:"phrases"},
     ],
     }
     }
