--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -1122,6 +1122,56 @@ SELECT {
 {english:"little while", spanish:"rato (m)",englishPhrase:"I'll be back in a little while", spanishPhrase:"regreso en un rato",module:"module 18",type:"words"},
 {english:"queue, line, tail", spanish:"cola (f)",englishPhrase:"the queue at the supermarket was massive", spanishPhrase:"la cola era enorme en el super",module:"module 18",type:"words"},
 {english:"to accuse", spanish:"acusar",englishPhrase:"why are you accusing me?", spanishPhrase:"¿por qué me está acusando?",module:"module 18",type:"words"},
+{english:"accustomed, used to", spanish:"acostumbrado/a",englishPhrase:"I'm used to doing it now", spanishPhrase:"estoy acostumbrado/a a hacerlo ahora",module:"module 19",type:"words"},
+{english:"wall", spanish:"muro (m), pared (f)",englishPhrase:"president trump wants to build a wall", spanishPhrase:"el presidente trump quiere construir un muro",module:"module 19",type:"words"},
+{english:"formal", spanish:"formal",englishPhrase:"it's a formal meeting", spanishPhrase:"es una junta formal",module:"module 19",type:"words"},
+{english:"drinking glass", spanish:"vaso (m)",englishPhrase:"he broke a glass", spanishPhrase:"rompió un vaso",module:"module 19",type:"words"},
+{english:"taste, flavor", spanish:"sabor (m)",englishPhrase:"what is the flavor like?", spanishPhrase:"¿cómo es el sabor?",module:"module 19",type:"words"},
+{english:"length", spanish:"largo (m)",englishPhrase:"the length is approximately six meters", spanishPhrase:"el largo es apoximadamente de seis metros",module:"module 19",type:"words"},
+{english:"cloth, fabric", spanish:"tela (f)",englishPhrase:"the fabric is white", spanishPhrase:"la tela es blanca",module:"module 19",type:"words"},
+{english:"worker", spanish:"trabajador/a",englishPhrase:"we have only female workers here", spanishPhrase:"sólo tenemos trabajadoras aquí",module:"module 19",type:"words"},
+{english:"suit, costume", spanish:"traje (m)",englishPhrase:"I need to buy a new suit", spanishPhrase:"necesito comprar un traje nuevo",module:"module 19",type:"words"},
+{english:"with me", spanish:"conmigo",englishPhrase:"come with me", spanishPhrase:"ven conmigo",module:"module 19",type:"words"},
+{english:"to complicate, to make difficult", spanish:"complicar",englishPhrase:"they're trying to make it difficult for us", spanishPhrase:"están tratando de complicarlo para nosotros",module:"module 19",type:"words"},
+{english:"furniture", spanish:"muebles (mp)",englishPhrase:"the house doesn't have furniture", spanishPhrase:"la casa no tiene muebles",module:"module 19",type:"words"},
+{english:"administration", spanish:"administración (f)",englishPhrase:"the administration of the building is terrible", spanishPhrase:"la administración del edificio es terrible",module:"module 19",type:"words"},
+{english:"abundant", spanish:"abundante",englishPhrase:"life is abundant", spanishPhrase:"la vida es abundante",module:"module 19",type:"words"},
+{english:"invitation", spanish:"invitación (f)",englishPhrase:"she didn't get an invitation", spanishPhrase:"no recibió una invitación",module:"module 19",type:"words"},
+{english:"to miss", spanish:"extrañar",englishPhrase:"I miss my friends", spanishPhrase:"extraño a mis amigos",module:"module 19",type:"words"},
+{english:"guest", spanish:"invitado/a",englishPhrase:"she's a guest at the hotel", spanishPhrase:"es una invitada en el hotel",module:"module 19",type:"words"},
+{english:"chaos", spanish:"caos (m)",englishPhrase:"it was chaos here yesterday", spanishPhrase:"ayer fue un caos aquí",module:"module 19",type:"words"},
+{english:"boot", spanish:"bota (f)",englishPhrase:"black leather boots", spanishPhrase:"botas de piel negra",module:"module 19",type:"words"},
+{english:"temptation", spanish:"tentación (f)",englishPhrase:"life is full of temptations", spanishPhrase:"la vida está llena de tentaciones",module:"module 19",type:"words"},
+{english:"storm", spanish:"tormenta (f)",englishPhrase:"a perfect storm", spanishPhrase:"una tormenta perfecta",module:"module 19",type:"words"},
+{english:"to authorize", spanish:"autorizar",englishPhrase:"he'll never authorize it", spanishPhrase:"nunca lo autorizará",module:"module 19",type:"words"},
+{english:"boring, bored", spanish:"aburrido/a",englishPhrase:"I'm very bored here", spanishPhrase:"estoy muy aburrido/a aquí",module:"module 19",type:"words"},
+{english:"plastic", spanish:"plástico/a",englishPhrase:"the handle is plastic", spanishPhrase:"el mango es de plástico",module:"module 19",type:"words"},
+{english:"potato", spanish:"papa (f)",englishPhrase:"roast potatoes", spanishPhrase:"papas rostizadas",module:"module 19",type:"words"},
+{english:"to associate", spanish:"asociar",englishPhrase:"I don't want to associate myself with them", spanishPhrase:"no quiero asociarme con ellos",module:"module 19",type:"words"},
+{english:"convinced", spanish:"convencido/a",englishPhrase:"sorry but I'm not convinced you're right", spanishPhrase:"lo siento pero no estoy convencido/a de que tienes rázon",module:"module 19",type:"words"},
+{english:"totally", spanish:"totalmente",englishPhrase:"it was totally destroyed", spanishPhrase:"fue totalmente destruido",module:"module 19",type:"words"},
+{english:"north", spanish:"norte (m)",englishPhrase:"I live in the north of the country", spanishPhrase:"vivo en el norte del pais",module:"module 19",type:"words"},
+{english:"living room", spanish:"sala (f) salón (m)",englishPhrase:"everyone is in the living room", spanishPhrase:"todos están en la sala",module:"module 19",type:"words"},
+{english:"flight", spanish:"vuelo (m)",englishPhrase:"at what time is the flight?", spanishPhrase:"¿a qué hora es el vuelo?",module:"module 19",type:"words"},
+{english:"to turn off", spanish:"apagar",englishPhrase:"I'll turn off the radio", spanishPhrase:"apagaré la radio",module:"module 19",type:"words"},
+{english:"knee", spanish:"rodilla (f)",englishPhrase:"she says her knee hurts", spanishPhrase:"dice que le duele la rodilla",module:"module 19",type:"words"},
+{english:"equivalent", spanish:"equivalente (m)",englishPhrase:"the equivalent amount is needed", spanishPhrase:"se necesita la cantidad equivalente",module:"module 19",type:"words"},
+{english:"amount", spanish:"cantidad (f)",englishPhrase:"a huge amount of money", spanishPhrase:"una cantidad enorme de dinero",module:"module 19",type:"words"},
+{english:"love", spanish:"amor (m)",englishPhrase:"love and passion", spanishPhrase:"el amor y la pasión",module:"module 19",type:"words"},
+{english:"power", spanish:"poder (m)",englishPhrase:"what legal powers do they have?", spanishPhrase:"¿qué poderes legales tienen?",module:"module 19",type:"words"},
+{english:"known, well known", spanish:"conocido/a",englishPhrase:"he's very well known here", spanishPhrase:"es muy bien conocido aquí",module:"module 19",type:"words"},
+{english:"pressure", spanish:"presión (f)",englishPhrase:"I don't work well under pressure", spanishPhrase:"no trabajo bien bajo presión",module:"module 19",type:"words"},
+{english:"to say hello", spanish:"saludar",englishPhrase:"say hello to her for me!", spanishPhrase:"¡salúdala de mi parte!",module:"module 19",type:"words"},
+{english:"organized", spanish:"organizado/a",englishPhrase:"they're very organized", spanishPhrase:"son muy organizados",module:"module 19",type:"words"},
+{english:"previously", spanish:"anteriormente",englishPhrase:"it wasn't like that previously", spanishPhrase:"anteriormente no era así",module:"module 19",type:"words"},
+{english:"tube, pipe", spanish:"tubo (m)",englishPhrase:"the pipe is cracked", spanishPhrase:"el tubo está agrietado",module:"module 19",type:"words"},
+{english:"deaf", spanish:"sordo/a",englishPhrase:"they are both deaf", spanishPhrase:"los dos son sordos",module:"module 19",type:"words"},
+{english:"tank, large container", spanish:"tanque (m)",englishPhrase:"to replace a tank of gas?", spanishPhrase:"¿para reemplazar un tanque de gas?",module:"module 19",type:"words"},
+{english:"code", spanish:"código (m)",englishPhrase:"what is the product code?", spanishPhrase:"¿cuál es el código del producto?",module:"module 19",type:"words"},
+{english:"mystery", spanish:"misterio (m)",englishPhrase:"he solved the mystery", spanishPhrase:"resolvió el misterio",module:"module 19",type:"words"},
+{english:"to solve, to work out", spanish:"resolver",englishPhrase:"it's a problem we must solve together", spanishPhrase:"es un problema que debemos resolver juntos",module:"module 19",type:"words"},
+{english:"contact", spanish:"contacto (m)",englishPhrase:"did you have contact with him previously?", spanishPhrase:"¿tuviste contacto con él anteriormente?",module:"module 19",type:"words"},
+{english:"news", spanish:"noticia (f)",englishPhrase:"we're watching the news", spanishPhrase:"estamos viendo las noticias",module:"module 19",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1575,7 +1625,7 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"the belt was very tight", spanishPhrase:"el cinturón estaba muy apretado",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's illegal to copy their products", spanishPhrase:"es ilegal copiar sus productos",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"a peaceful home", spanishPhrase:"un hogar tranquillo",module:"module 17",type:"phrases"},
-{english:"", spanish:"",englishPhrase:"what a mess!", spanishPhrase:"¡qu¡ desorden!",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what a mess!", spanishPhrase:"¡qué desorden!",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the children refused to behave during the activity", spanishPhrase:"los niños se negaron a comportarse durante la actividad",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he broke the screen with a block of wood", spanishPhrase:"rompió la pantalla con un bloque de madera",module:"module 17",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"they are counting the votes to elect the next president", spanishPhrase:"están contando los votos para elegir al próximo presidente",module:"module 17",type:"phrases"},
@@ -1611,6 +1661,38 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"she accuses me of delaying the purchase", spanishPhrase:"me acusa de retrasar la compra",module:"module 18",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"a supreme example of greed", spanishPhrase:"un ejemplo supremo de codicia",module:"module 18",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"thank you, the same to you", spanishPhrase:"gracias, igualmente",module:"module 18",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she's totally convinced it's true", spanishPhrase:"está convencida totalmente de que es la verdad",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the pressure in the tank is very high", spanishPhrase:"la presión en el tanque es muy alta",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the storm caused a lot of panic and chaos", spanishPhrase:"la tormenta causó mucho pánico y caos",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you have to pay the equivalent in dollars", spanishPhrase:"tienes que pagar el equivalente en dólares",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the power of love", spanishPhrase:"el poder del amor",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they tried to solve the mystery", spanishPhrase:"trataron de resolver el misterio",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"when is your flight?", spanishPhrase:"¿cuándo es tu vuelo?",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the worker broke the water pipe", spanishPhrase:"el trabajador rompió el tubo de agua",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he wasn't used to it", spanishPhrase:"no estaba acostumbrado",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"i'm going to say hello to them", spanishPhrase:"les voy a saludar",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the suit is very expensive because of the fabric", spanishPhrase:"el traje es caro por la tela",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they sent me a formal invitation", spanishPhrase:"me mandaron una invitación formal",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"plastic glasses are safer around the pool", spanishPhrase:"los vasos de plástico son más seguros alrededor de la alberca",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what is the code to turn off the alarm?", spanishPhrase:"¿cuál es el código para apagar la alarma?",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"my knees hurt", spanishPhrase:"me duelen las rodillas",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the administration is well organized", spanishPhrase:"la administración está bien organizada",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the living room is full of old furniture", spanishPhrase:"la sala está llena de muebles viejos",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"do you have direct contact with him?", spanishPhrase:"¿tienes contacto directo con él?",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I think you're going to miss working with me next year", spanishPhrase:"creo que vas a extrañar trabajar conmigo el próximo año",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I love the taste of the potatoes in this dish", spanishPhrase:"me encanta el sabor de las papas en este plato",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they're not going to authorize it", spanishPhrase:"no van a autorizarlo",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"all the guests at the party were bored", spanishPhrase:"todos los invitados en la fiesta estaban aburridos",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I would never associate one with the other", spanishPhrase:"yo nunca asociaría uno con el otro",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she couldn't resist the temptation", spanishPhrase:"no pudo resistir la tentación",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there are abundante opportunities", spanishPhrase:"hay oportunidades abuntantes",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he didn't know the exact amount", spanishPhrase:"no sabía la cantidad exacta",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"previously, I was working for a company in panama", spanishPhrase:"anteriormente, estaba trabajando para una empesa en panamá",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"my uncle is deaf", spanishPhrase:"mi tío es sordo",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the north of the country is known for it's wealth", spanishPhrase:"el norte del país es conocido por su riqueza",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the news is going to complicate things between them", spanishPhrase:"esta noticia va a complicar las cosas entre ellos",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what is the length of the room?", spanishPhrase:"¿cuál es el largo del cuarto?",module:"module 19",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she wore black boots to the party", spanishPhrase:"llevó botas negras a la fiesta",module:"module 19",type:"phrases"},
     ],
     }
     }
